fix microsite header alignment

--- a/packages/components/src/components/post-header/post-header.scss
+++ b/packages/components/src/components/post-header/post-header.scss
@@ -97,9 +97,12 @@ header,
 .local-header {
   position: relative;
   background-color: #fff;
+  min-height: var(--post-local-header-expanded-min-height);
+  display: flex;
+  align-items: var(--post-local-header-align-items);
 
   .section {
-    min-height: var(--post-local-header-expanded-min-height);
+    width: 100%;
     padding-inline-start: var(--post-local-header-padding-inline-start);
     padding-inline-end: var(--post-local-header-padding-inline-end);
     padding-block: var(--post-local-header-padding-block);
